Fix issue with multiline errors overlapping input fields

--- a/client/src/app/auth/registration/registration.component.css
+++ b/client/src/app/auth/registration/registration.component.css
@@ -1,3 +1,9 @@
 mat-dialog-content {
   overflow: hidden;
 }
+
+.registration__form {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
